--- a/_includes/header.html
+++ b/_includes/header.html
@@ -94,7 +94,7 @@
               {%- endif -%}
               {%- endif -%}
               {% endfor -%}
-            <li class="nav-item"><a class="nav-link" href="/assets/pdf/xidong_cv.pdf" target="_blank">cv<i class="fas fa-download"></i></a></li> 
+            <li class="nav-item"><a class="nav-link" href="/assets/pdf/Mengyue_Yang_CV_2023_09.pdf" target="_blank">cv<i class="fas fa-download"></i></a></li> 
 
               {%- if site.enable_darkmode %}
 
