--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -72,5 +72,7 @@ layout: default
             </div>
           {%- endif %}
         </article>
-
+      <div style="width: 50%; margin: 0 auto;">
+            <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=by_O_-lV9DgId7Nm1wxP3nFSJMrTcOSPPYM0LEoCkY0&cl=ffffff&w=a"></script>
+      </div>
 </div>
